# timlineVisualization

forensic_analyzer/: Report_EXCEL_locations.xlsx  TimeLine_Report_EXCEL.xlsx  __init__.py  forensic_analysis.kml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_basic.py
forensic_analyzer/analysis/: __init__.py  app_sessions.py  movement.py  phone_usage.py
forensic_analyzer/config/: __init__.py  settings.py
forensic_analyzer/data/: __init__.py  loaders.py  parsers.py  validators.py
forensic_analyzer/reporting/: __init__.py  pdf_generator.py  summary.py
forensic_analyzer/utils/: __init__.py  coordinates.py
forensic_analyzer/visualization/: __init__.py  kml_generator.py  styles.py
